syntax="proto3";
package login;
option go_package = "github.com/oriastanjung/stellar/proto/auth";

message LoginRequest{
    string email = 1;
    string password = 2;
}

message LoginResponse{
    string message = 1;
    string token = 2;
}