syntax="proto3";

package register;
option go_package = "github.com/oriastanjung/stellar/proto/auth";


message SignUpRequest{
    string email = 1;
    string password = 2;
    string username = 3;
}


message SignUpResponse{
    string message = 1;
}